1.fix UI 2.fix bug

--- a/FitHub/FitHub/en.lproj/Localizable.strings
+++ b/FitHub/FitHub/en.lproj/Localizable.strings
@@ -6,5 +6,7 @@
   Copyright © 2017年 Cyrill. All rights reserved.
 */
 
+"LOCATION" = "Location";
+"CODE_LANGUAGE" = "Code Language";
 "ALL_LANGUAGE" = "All Language";
 "HOME_TOTAL" = "Total";
