fix about UI add about description

--- a/FitHub/FitHub/en.lproj/Localizable.strings
+++ b/FitHub/FitHub/en.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "LOGIN" = "Login";
 "USERNAME" = "User Name";
 "PASSWORD" = "Password";
+
+"ABOUT_DESC" = "FitHub is a GitHub third party client.";
