add search add API add Local fix bug update the statusBar color to white

--- a/FitHub/FitHub/en.lproj/Localizable.strings
+++ b/FitHub/FitHub/en.lproj/Localizable.strings
@@ -21,4 +21,6 @@
 "USERNAME" = "User Name";
 "PASSWORD" = "Password";
 
+"MEMBERS" = "Members";
+
 "ABOUT_DESC" = "FitHub is a GitHub third party client.";
